# akari

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/levels/: easy_1.json  easy_2.json  normal_1.json
src/: CMakeLists.txt  Entity.cpp  Entity.h  IceRinksClone  RenderWindow.cpp  RenderWindow.h  RigidSprite.cpp  RigidSprite.h  Settings.h  main.cpp
src/game_objects/: Board.cpp  Board.h  FloorTile.cpp  FloorTile.h  Tile.h  WallTile.cpp  WallTile.h
src/rendering/: Entity.h  RenderWindow.cpp  RenderWindow.h
